Fix spacing bug with footer

--- a/web/styles/Footer.module.css
+++ b/web/styles/Footer.module.css
@@ -1,10 +1,19 @@
 .container {
   font-size: 18px;
   background-color: #333333;
-  padding: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 0px;
 }
 
 .container a {
   text-decoration: underline;
   color: #c586c0;
+}
+
+@media screen and (min-width: 650px) {
+  .container {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
 }
