--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -32,7 +32,8 @@ h6 {
 
 section,
 nav,
-article {
+article,
+footer {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 40px;
@@ -59,7 +60,8 @@ a {
 @media screen and (min-width: 400px) {
   section,
   nav,
-  article {
+  article,
+  footer {
     padding-left: 40px;
     padding-right: 40px;
     margin-bottom: 80px;
